# aiogramic

./: README.md  pyproject.toml  test.py
aiogramic/: __init__.py  __main__.py
aiogramic/commands/: create_callback_data.py  create_handler.py  create_middleware.py  init_app.py
aiogramic/enums/: __init__.py  entity_type.py  handler_type.py
aiogramic/templates/: callback_data
aiogramic/templates/app/: .env.example
aiogramic/templates/app/src/: __main__.py  cfg.py
aiogramic/templates/app/src/handlers/: router.py
aiogramic/templates/app/src/handlers/command/: router.py  start_command.py
aiogramic/templates/docker/: Dockerfile  docker-compose.yaml
aiogramic/templates/handlers/: callback_query_handler  command_handler  message_handler
aiogramic/templates/keyboards/: inline  text
aiogramic/utils/: builders.py  create_handler.py  file.py
