[tool.poetry]
name = "aiogramic"
version = "0.1.0"
description = ""
authors = ["yeghorkikhai <yeghorkikhai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
aiogram = "^3.1.1"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
